--- a/html/profileConfig.html
+++ b/html/profileConfig.html
@@ -14,25 +14,25 @@
           <button id="add" title="Add">+</button>
           <button id="remove" title="Remove">–</button>
           <button id="duplicate" title="Duplicate">⧉</button>
-          <button id="down" title="Down">˅</button>
-          <button id="up" title="Up">˄</button>
+          <!--<button id="down" title="Down">˅</button> -->
+          <!--<button id="up" title="Up">˄</button> -->
         </div>
+
         <select id="profile-list" size="10"></select>
       </div>
+      
       <div class="main">
         <div id="editor">
           <form id="profile-form">
-            <label>Name: <input type="text" id="name" /></label><br />
-            <label>Build Type: <input type="text" id="buildType" /></label><br />
-            <label>Toolchain: <input type="text" id="toolchain" /></label><br />
-            <label>Generator: <input type="text" id="generator" /></label><br />
-            <label>Build Dir: <input type="text" id="buildDirectory" /></label><br />
+            <p id="rawData"></p>   
           </form>
         </div>
+
         <div class="actions">
           <button id="save">Save</button>
-          <button id="action">ACTION</button>
+          <button id="cancel">Cancel</button>
         </div>
+        <textarea name="" id="log"></textarea>
       </div>
     </div>
   </div>
@@ -40,5 +40,20 @@
 		const vscode = acquireVsCodeApi();
   </script>
   <script src="{{root}}/profileConfig.js"></script>
+
+
+  <style>
+    textarea#log {
+      width: 100%;
+      height: 200px;
+      resize: none;
+      font-family: monospace;
+      font-size: 12px;
+      background-color: #f0f0f0;
+      border: 1px solid #ccc;
+      padding: 10px;
+      overflow-y: auto;
+    }
+  </style>
 </body>
 </html>
